# Machine-Learning-Avanzado

./: README.md  main.py  pyproject.toml
extraProject/: best_gnn_model.pth  main.ipynb  utils.py
extraProject/data/: astroData.csv
extraProject/models/: gat.py  gatV2.py  gnn.py
