[project]
name = "machine-learning-avanzado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optuna-dashboard>=0.20.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]
